hphp/hack/test/typecheck/retonly_type_member.php.exp
File "retonly_type_member.php", line 7, characters 17-24:
The noreturn typehint can only be used to describe a function return type (Naming[2063])
